[wang yao] 仓促完成

--- a/src/app/Header/index.css
+++ b/src/app/Header/index.css
@@ -6,4 +6,12 @@
 
 .nav span {
   margin-right: 30px;
+  font-size: large;
+  float: right;
+}
+
+span a {
+  font-weight: bold;
+  text-decoration: none;
+  color: white;
 }
