--- a/src/app/Timer/index.css
+++ b/src/app/Timer/index.css
@@ -50,9 +50,11 @@
 .timer-display {
   float: right;
   width: 53%;
-  height: 120px;
   background-color: transparent;
   border:5px solid black;
+  font-size: 80px;
+  text-align: center;
+  padding: 60px 0;
 }
 
 .go-home {
